# coveragePathPlanning

./: .gitignore  README.md  pyproject.toml  requirements.txt
algorithms/: MANIFEST.json  README.md  __init__.py  build_graph.py  rectangle_coverage.py  segmentation.py
algorithms/connectivity_methods/: __init__.py  strategy.py
algorithms/segmentation_methods/: __init__.py  candidate_scan.py
docs/: research_problem_and_algorithm.md
experiments/: README.md
experiments/configs/: robot_config_default.json
experiments/connectivity_repair_ablation/: README.md  run_ablation.py
experiments/connectivity_repair_ablation/maps/: README.md
experiments/fields2cover_comparison/: README.md
experiments/fields2cover_comparison/configs/: experiment_map_test1.json  experiment_parkingGraph.json
experiments/fields2cover_comparison/maps/: README.md  parkingGraph.png.json
experiments/segmentation_order_comparison/: README.md  run_comparison.py
experiments/segmentation_order_comparison/maps/: README.md
experiments/segmentation_order_comparison/results/: .gitkeep
experiments/vehicle_speed_comparison/: README.md  plot_results.py  run_comparison.py
experiments/vehicle_speed_comparison/configs/: experiment_map_test1.json  (+1 more)
generate_map/: README.md  __init__.py  fields2cover.py  random_obstacles.py
src/: __init__.py  algorithm_api.py  build_graph.py  configuration.py  generate_map.py  generate_map_field2cover.py  main_pipeline.py  rectangle_coverage.py  requirements.txt  segmentation.py  visualization.py
tests/: __init__.py  test_repository.py
(+15 files in other folders)
