[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "path-coverage-research"
version = "0.1.0"
description = "Reproducible coverage-path-planning experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "matplotlib>=3.7",
  "imageio>=2.31",
  "imageio-ffmpeg>=0.4.9",
]

[project.scripts]
pathcoverage = "src.main_pipeline:cli"

[tool.setuptools.packages.find]
include = ["src*", "algorithms*", "generate_map*"]

